# FreeRecording

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  electron-builder.json5  index.html  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
electron/: electron-env.d.ts  logger.ts  macosPermissionReset.test.ts  macosPermissionReset.ts  main.ts  preload.ts  windows.ts
electron/ffmpeg/: ffmpegResolver.ts
electron/ipc/: handlers.ts  nativeBridge.ts  recordingPackage.test.ts  recordingPackage.ts  recordingStream.ts  screenAccess.test.ts  screenAccess.ts  videoProbe.test.ts  videoProbe.ts
electron/native-bridge/cursor/: adapter.ts  telemetryCursorAdapter.ts
electron/native-bridge/services/: cursorService.ts  ffmpegService.test.ts  ffmpegService.ts
electron/native/screencapturekit/: Package.swift
electron/native/wgc-capture/: CMakeLists.txt
electron/native/wgc-capture/src/: audio_sample_utils.cpp  audio_sample_utils.h  cursor-sampler.cpp  desktop_duplication_session.cpp  desktop_duplication_session.h  main.cpp  mf_encoder.cpp  mf_encoder.h
electron/recording/: webm-duration.ts
handoff/: AGENTS.md  AUDIO_VIDEO_SYNC_INVESTIGATION.md  CURRENT_GOAL.md  LONG_RECORDING_NATIVE_WEBCAM_PLAN.md  MACOS_PERMISSION_TROUBLESHOOTING.md  NLE_EDITOR_ARCHITECTURE_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  RECORDING_PACKAGE_PLAN.md  REMAINING_ISSUES_AND_TODOS.md
icons/icons/mac/: icon.icns
promo/github-10s/: README.md  director-notes.md  index.html
promo/github-15s/: README.md  director-notes.md  index.html
scripts/: before-pack.cjs  build-windows-wgc-helper.mjs  create-macos-dmg.mjs  generate-icons.mjs  prepare-ffmpeg-runtime.cjs  render-promo-video.mjs  verify-ffmpeg-runtime.cjs  verify-windows-portable.cjs
src/: App.tsx  index.css  main.tsx
src/components/launch/: AppSettingsDialog.tsx  LaunchWindow.module.css  LaunchWindow.tsx  RecordingFrame.tsx  SourceSelector.module.css  SourceSelector.test.tsx  SourceSelector.tsx  audioDeviceMenuLayout.test.ts  audioDeviceMenuLayout.ts
src/components/ui/: audio-level-meter.tsx  color-picker.tsx  item-content.tsx  slider.tsx  switch.tsx
src/components/video-editor/: AnnotationOverlay.tsx  AnnotationSettingsPanel.tsx  BlurSettingsPanel.tsx  CropControl.tsx  EditorEmptyState.tsx  ExportDialog.tsx  FormatSelector.tsx  KeyboardShortcutsHelp.tsx  PlaybackControls.tsx  SettingsPanel.tsx  ShortcutsConfigDialog.tsx  UnsavedChangesDialog.tsx  VideoEditor.tsx  VideoPlayback.tsx  projectPersistence.ts  (+2 more)
src/hooks/: recorderHandle.test.ts  recorderHandle.ts  useAudioPeaks.test.ts  useAudioPeaks.ts  useEditorHistory.ts  useScreenRecorder.ts
src/lib/: appSettings.ts  nativeMacRecording.ts  nativeWindowsRecording.test.ts  nativeWindowsRecording.ts  recordingPackageNaming.ts  recordingSession.ts  userPreferences.test.ts  userPreferences.ts  webcamSettings.test.ts  webcamSettings.ts
src/native/: client.ts  contracts.ts  index.ts
tests/e2e/: windows-native-checklist.spec.ts
(+99 files in other folders)
